<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DangNhapActitvity"
    android:background="@color/tranparentBackground"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/awslogo"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_box_black_24dp"
                android:padding="@dimen/_5sdp"/>
            <EditText
                android:id="@+id/edtDN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="@dimen/_16sdp"
                android:maxLines="1"
                android:background="@drawable/custom_edtext"
                android:hint="@string/ten_dang_nhap"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:padding="@dimen/_5sdp"/>

            <EditText
                android:id="@+id/edtMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="@dimen/_16sdp"
                android:maxLines="1"
                android:background="@drawable/custom_edtext"
                android:inputType="textPassword"
                android:hint="@string/mat_khau"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            >

            <TextView
                android:id="@+id/txtDangKy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dang_ky"
                android:textColor="@color/textColorRed"
                android:textSize="@dimen/_13ssp"
                android:padding="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/txtQuenMatKhau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/quen_mat_khau"
                android:textAlignment="textEnd"
                android:textColor="@color/textColorRed"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/dang_nhap"
            android:background="@drawable/custom_btndangnhap"
            android:textColor="@color/textColorWhite"
            android:textAllCaps="false"
            android:textSize="@dimen/_18ssp"/>

    </LinearLayout>

</RelativeLayout>